--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 </head>
 <body>
   <div class="container page-wrap">
-    <header>
+    <header class="mainTitle">
       <h1 class="home">Where</h1>
       <h1 class="homeArt">ART</h1>
       <h1 class="home">Thou?</h1>
     </header>
-    <section>
-      <h1>Where are you?</h1>
-      <a href="pike.html"><button class="button">Pike Place Market</button></a>
-      <a href="pioneer.html"><button class="button">Pioneer Square</button></a>
-      <a href="slu.html"><button class="button">South Lake Union</button></a>
-      <p>More neighborhoods on the way!</p>
+    <section class="where">
+      <h1 class="question">Where are you?</h1>
+        <a href="pike.html"><button class="button">Pike Place Market</button></a>
+        <a href="pioneer.html"><button class="button">Pioneer Square</button></a>
+        <a href="slu.html"><button class="button">South Lake Union</button></a>
+      <p class="news">More neighborhoods on the way!</p>
     </section>
   <footer>
         <p class="tagline">The easiest way to find public art in your neighborhood.</p>
