--- a/pike.html
+++ b/pike.html
@@ -18,73 +18,84 @@
           <h1 class="homeArt-small">ART</h1>
           <h1 class="home-small">Thou?</h1>
         </div>
-        <a href="index.html"><span class="icon-compass">New Location</a>
-        <a href="profile.html"><span class="icon-user">Profile</a>
+        <div class="navlinks">
+          <a href="index.html" class="new"><span class="icon-compass">New Location</a>
+          <a href="profile.html"><span class="icon-user">Profile</a>
+        </div>
       </nav>
     </header>
     <section>
-      <h1>South Lake Union</h1>
+      <h1 class="locationTitle">Pike Place Market</h1>
     </section>
+    <section class="wrapper">
     <article>
-      <h1>Untitled Totem Pole</h1>
-      <img src="http://8bb85fa31566d400f4e9-68ca757540766e550a60121404b7e599.r5.cf1.rackcdn.com/8a959b3039082eab8c974cd5e2ba5f6f.png">
-      <h2>Western Ave and Virginia St</h2>
-      <h3>Marvin Oliver and James Bender (1984)</h3>
-      <p>Carved cedar pole</p>
-      <section>
-        <ul class="expanding">
-        <li class="moreinfo">
-          <h4 class="expand-button">More Info</h4>
-            <p>Marvin Oliver selected trees for the artworks from the Skagit National Forest and then roughed out the two poles. James Bender designed and carved the traditional totem pole after the original concept by Oliver.</p>
-            <p>The Untitled Totem Pole, based on traditional designs of the Haida people, depicts not a prescribed legend, but symbolic figures that recognize qualities of nearby Pike Place Market, as well as the surrounding city. From the top, the figures include Raven holding a Salish woman’s spinning whorl, Human holding a potlatch of prosperity, Little Human the messenger, Killer Whale or Blackfish, Little Raven and Bear holding a hawk.</p>
-            <p>Bender is an artist known for his Northwest Coast Native American artworks.  Oliver is a well-known Northwest sculptor and printmaker.  He has created many public artworks, including A Salish Welcome (2010), which is part of the city of Seattle’s collection.</p>
-        </li>
-        <li class="map">
-          <h4 class="expand-map">Find It</h4>
-          <img src="images/steinbrueck_park.jpg" alt="map">
-        </li>
-    </section>
-    </article>
-    <article>
-      <h1>Rachel</h1>
-      <img src="http://media-cache-ak0.pinimg.com/736x/35/db/13/35db132d8d3b12c0d8223499e313c62e.jpg">
-      <h2>Pike Place entrance</h2>
-      <h3>Georgia Gerber (1986)</h3>
-      <p>Bronze piggy bank. Pike Place Market Foundation Collection</p>
-      <section>
-        <ul class="expanding">
-        <li class="moreinfo">
-          <h4 class="expand-button">More Info</h4>
-          <p>Rachel is a bronze cast piggy bank created by Georgia Gerber, a sculptor from Whidbey Island, Washington. Rachel weighs in at 550 pounds (250 kg) and was named after a real 750-pound pig who won the 1985 Island County Fair. She has been located since 1986 at the corner of Pike Place under the iconic “Public Market Center” sign and clock. Legend has it that if you rub Rachel’s snout and make a donation, you’ll have good luck.  Her cousin Billie the Piggy Bank arrived in the Market in 2011 and sits on Western Avenue at the bottom of the Hillclimb.</p>
-          <p>Rachel was the inspiration behind the Pigs on Parade fundraiser throughout downtown Seattle in 2001 and again in 2007 for the Market’s centennial celebration.</p>
-        </li>
-        <li class="map">
-          <h4 class="expand-map">Find It</h4>
-          <img src="images/Rachel_map.jpg" alt="map">
-        </li>
-      </ul>
+      <section class="primary">
+        <img class="artpic" src="http://8bb85fa31566d400f4e9-68ca757540766e550a60121404b7e599.r5.cf1.rackcdn.com/8a959b3039082eab8c974cd5e2ba5f6f.png">
+      </section>
+      <section class="secondary">
+        <h1>Untitled Totem Pole</h1>
+        <h2>Western Ave and Virginia St</h2>
+        <h3>Marvin Oliver and James Bender (1984)</h3>
+        <p class="brief">Carved cedar pole</p>
+        <section class="expanding">
+          <div class="moreinfo">
+            <h4 class="expand-button">More Info</h4>
+              <p>Marvin Oliver selected trees for the artworks from the Skagit National Forest and then roughed out the two poles. James Bender designed and carved the traditional totem pole after the original concept by Oliver.</p>
+              <p>The Untitled Totem Pole, based on traditional designs of the Haida people, depicts not a prescribed legend, but symbolic figures that recognize qualities of nearby Pike Place Market, as well as the surrounding city. From the top, the figures include Raven holding a Salish woman’s spinning whorl, Human holding a potlatch of prosperity, Little Human the messenger, Killer Whale or Blackfish, Little Raven and Bear holding a hawk.</p>
+              <p>Bender is an artist known for his Northwest Coast Native American artworks.  Oliver is a well-known Northwest sculptor and printmaker.  He has created many public artworks, including A Salish Welcome (2010), which is part of the city of Seattle’s collection.</p>
+          </div>
+          <div class="map">
+            <h4 class="expand-map">Find It</h4>
+            <img class="mapz" src="images/steinbrueck_park.jpg" alt="map">
+          </div>
+        </section>
       </section>
     </article>
     <article>
-      <h1>Tree of Life</h1>
-      <img src="http://www.seattle.gov/parks/projects/victor_steinbrueck/images/celebration_photo4.jpg">
-      <h2>Western Ave and Virginia St</h2>
-      <h3>Clark Wiegman, Karen Kiest and Kim Lokan, (2012)</h3>
-      <p>Stainless steel and tempered glass. Homeless Remembrance Project</p>
-      <section>
-        <ul class="expanding">
-        <li class="moreinfo">
-          <h4 class="expand-button">More Info</h4>
-          <p>Women in Black and WHEEL (Women's Housing and Equality Enhancement League) dedicated this permanent memorial to remember the homeless people who have lived and died in Seattle. The leaf cutouts represent those who we have lost- the leaves were printed with the names of deceased Seattlites and have been scattered throughout the city.</p>
-          <p>Blown by winds of change, a lone iconic tree bends while rooted to the earth. Metaphorically, this image represents both the difficult challenges and the encouraging possibilities of real change.</p>
-        </li>
-        <li class="map">
-          <h4 class="expand-map">Find It</h4>
-          <img src="images/steinbrueck_park.jpg" alt="map">
-        </li>
-      </ul>
+      <section class="primary">
+        <img class="artpic" src="http://media-cache-ak0.pinimg.com/736x/35/db/13/35db132d8d3b12c0d8223499e313c62e.jpg">
+      </section>
+      <section class="secondary">
+        <h1>Rachel</h1>
+        <h2>Pike Place entrance</h2>
+        <h3>Georgia Gerber (1986)</h3>
+        <p class="brief">Bronze piggy bank. Pike Place Market Foundation Collection</p>
+        <section class="expanding">
+          <div class="moreinfo">
+            <h4 class="expand-button">More Info</h4>
+            <p>Rachel is a bronze cast piggy bank created by Georgia Gerber, a sculptor from Whidbey Island, Washington. Rachel weighs in at 550 pounds (250 kg) and was named after a real 750-pound pig who won the 1985 Island County Fair. She has been located since 1986 at the corner of Pike Place under the iconic “Public Market Center” sign and clock. Legend has it that if you rub Rachel’s snout and make a donation, you’ll have good luck.  Her cousin Billie the Piggy Bank arrived in the Market in 2011 and sits on Western Avenue at the bottom of the Hillclimb.</p>
+            <p>Rachel was the inspiration behind the Pigs on Parade fundraiser throughout downtown Seattle in 2001 and again in 2007 for the Market’s centennial celebration.</p>
+          </div>
+          <div class="map">
+            <h4 class="expand-map">Find It</h4>
+            <img class="mapz" src="images/Rachel_map.jpg" alt="map">
+          </div>
+        </section>
       </section>
     </article>
+    <article>
+      <section class="primary">
+        <img class="artpic" src="http://www.seattle.gov/parks/projects/victor_steinbrueck/images/celebration_photo4.jpg">
+      </section>
+      <section class="secondary">
+        <h1>Tree of Life</h1>
+        <h2>Western Ave and Virginia St</h2>
+        <h3>Clark Wiegman, Karen Kiest and Kim Lokan, (2012)</h3>
+        <p class="brief">Stainless steel and tempered glass. Homeless Remembrance Project</p>
+        <section class="expanding">
+          <div class="moreinfo">
+            <h4 class="expand-button">More Info</h4>
+            <p>Women in Black and WHEEL (Women's Housing and Equality Enhancement League) dedicated this permanent memorial to remember the homeless people who have lived and died in Seattle. The leaf cutouts represent those who we have lost- the leaves were printed with the names of deceased Seattlites and have been scattered throughout the city.</p>
+            <p>Blown by winds of change, a lone iconic tree bends while rooted to the earth. Metaphorically, this image represents both the difficult challenges and the encouraging possibilities of real change.</p>
+          </div>
+          <div class="map">
+            <h4 class="expand-map">Find It</h4>
+            <img class="mapz" src="images/steinbrueck_park.jpg" alt="map">
+          </div>
+        </section>
+      </section>
+    </article>
+  </section>
   <footer>
         <p class="tagline">The easiest way to find public art in your neighborhood.</p>
   </footer>
