--- a/pioneer.html
+++ b/pioneer.html
@@ -35,18 +35,18 @@
         <h1>Call and Response</h1>
         <h2>4th Ave S & S Washington St</h2>
         <h3>Stuart Nakamura (2008)</h3>
-        <p>Boulder, inlaid pavers and metal screen</p>
-        <ul class="expanding">
-          <li class="moreinfo">
+        <p class="brief">Boulder, inlaid pavers and metal screen</p>
+        <section class="expanding">
+          <div class="moreinfo">
             <h4 class="expand-button">More Info</h4>
               <p>A large boulder etched with abstract lines evoking water ripples forms the focal point of Call and Response, a sculptural installation on the plaza of Fire Station 10. Natural stone inlays set into the plaza are reminiscent of designs from Asian art and a nod to the station's location at the edge of the Chinatown-International District, home to Seattle's original Asian immigrants. The shapes of the inlays reflect the arc of a steel, laser-cut "water spray" sculpture, which depicts a firefighter wielding a hose.</p>
               <p>Stuart Nakamura writes: "Call and Response pays tribute to the service and valor of the firefighters of Fire Station 10 with these three elements: a stainless steel arc of water containing the imagery of smoke and a firefighter; a rough-hewn, moss-covered granite boulder; and inlaid arcs of natural stone. Known in the Seattle Fire Department as 'The Rock,' Fire Station 10 continues the historic tradition of protecting the downtown and International District communities with its response to emergency calls." </p>
-          </li>
-          <li class="map">
+          </div>
+          <div class="map">
             <h4 class="expand-map">Find It</h4>
-            <img src="images/callresponsemap.jpg" alt="map">
-          </li>
-        </ul>
+            <img class="mapz" src="images/callresponsemap.jpg" alt="map">
+          </div>
+        </section>
       </section>
     </article>
     <article>
@@ -57,20 +57,20 @@
         <h1>Seattle Fallen Firefighters Memorial</h1>
         <h2>Occidental Square</h2>
         <h3>Hai Ying Wu (1995)</h3>
-        <p>Cast bronze and granite sculpture. Seattle Bravest Charity</p>
-        <ul class="expanding">
-          <li class="moreinfo">
+        <p class="brief">Cast bronze and granite sculpture. Seattle Bravest Charity</p>
+        <section class="expanding">
+          <div class="moreinfo">
             <h4 class="expand-button">More Info</h4>
               <p>Although inspired by the four firefighters that died in the line of duty while fighting a warehouse fire in Seattle's Chinatown International District on January 5th, 1995, the Fallen Firefighter's Memorial is a respectful tribute to all thirty-one firefighters that have died in the line of duty since the department began in 1889. </p>
               <p>Hai Ying Wu, an internationally recognized artist from the University of Washington School of Arts, worked with a team of firefighters to design the life-sized figures and also sculpted them.</p>
               <p>Wu intentionally designed the figures with masked faces noting that they "..could be any of the thousands of firefighters who have donned the uniform of the Seattle Fire Department."</p>
               <p>Surrounding the figures are slabs of granite intended to depict a collapsed building.  Wu inscribed his own words into one of the slabs describing the memorial as "Represented realistically yet with exaggerated gestures to emphasize the intensity of the battle in which they are engaged."</p>
-          </li>
-          <li class="map">
+          </div>
+          <div class="map">
             <h4 class="expand-map">Find It</h4>
-            <img src="images/occidentalmap.jpg" alt="map">
-          </li>
-        </ul>
+            <img class="mapz" src="images/occidentalmap.jpg" alt="map">
+          </div>
+        </section>
       </section>
     </article>
     <article>
@@ -81,17 +81,17 @@
         <h1>Rain Forest Gates</h1>
         <h2>201 S Jackson St.</h2>
         <h3>Jean Whitesavage and Nick Lyle (1999)</h3>
-        <p>Hand-forged and painted steel gates. King County Public Art Collection (4Culture)</p>
-        <ul class="expanding">
-          <li class="moreinfo">
+        <p class="brief">Hand-forged and painted steel gates. King County Public Art Collection (4Culture)</p>
+        <section class="expanding">
+          <div class="moreinfo">
             <h4 class="expand-button">More Info</h4>
             <p>The entire northwest corner of this mixed-use building is encompassed at street level with three sets of impressive, curved entry gates capped by a decorative cornice. Created out of forged steel and celebrating nature in all its glory, the imagery is taken from plants and animals found in the Pacific Northwest. Hundreds of pieces of ironwork are woven together to express the beauty and harmony of the web of life, alluding to the intricate dance of the ecosystem. Forged brackets link the theme to the super mullion structure of the building curtain wall and up to a decorative steel band of deer fern. The open steel frame at the building cornice is inset with forged alder leaves. The artists think of their sculpture as a kind of visual poetry; rather than simply imitating nature, it speaks the language of living things through the medium of steel.</p>
-          </li>
-          <li class="map">
+          </div>
+          <div class="map">
             <h4 class="expand-map">Find It</h4>
-            <img src="images/rainForestGatesMap.jpg" alt="map">
-          </li>
-        </ul>
+            <img class="mapz" src="images/rainForestGatesMap.jpg" alt="map">
+          </div>
+        </section>
       </section>
     </article>
     <article>
@@ -102,18 +102,18 @@
         <h1>Firefighter Silhouette</h1>
         <h2>301 Second Ave S</h2>
         <h3>Tom Askman (1987)</h3>
-        <p>Bronze and zinc cut-out sculptures</p>
-        <ul class="expanding">
-          <li class="moreinfo">
+        <p class="brief">Bronze and zinc cut-out sculptures</p>
+        <section class="expanding">
+          <div class="moreinfo">
             <h4 class="expand-button">More Info</h4>
               <p>Tom Askman created three eight-foot high silhouettes of firefighters, with bronze finish on zinc  underlay, for Fire Station 10. The cutouts appear in second story corner niches on the outside of the building, and are back-lit at night.</p>
               <p>In 1984, voters approved a bond issue that allowed for the renovation of 16 fire stations. Three artists, Tom Askman, Kenny Schneider and Ellen Ziegler, were chosen to work as a team on the project. The artists were asked to examine all of the fire stations and to select those they would like to work with. The artists selected five stations throughout the city: the old Fire Station 6 (no longer being used), Fire Station 13, Fire Station 17, Fire Station 41 and the old Fire Station 10 (now the Fire Station Headquarters).</p>
-          </li>
-          <li class="map">
+          </div>
+          <div class="map">
             <h4 class="expand-map">Find It</h4>
-            <img src="images/firefighterSilhoutteMap.jpg" alt="map">
-          </li>
-        </ul>
+            <img class="mapz" src="images/firefighterSilhoutteMap.jpg" alt="map">
+          </div>
+        </section>
       </section>
     </article>
     </section>
