--- a/slu.html
+++ b/slu.html
@@ -18,7 +18,7 @@
           <h1 class="homeArt-small">ART</h1>
           <h1 class="home-small">Thou?</h1>
         </div>
-        <a href="index.html"><span class="icon-compass">New Location</a>
+        <a href="index.html" class="new"><span class="icon-compass">New Location</a>
         <a href="profile.html"><span class="icon-user">Profile</a>
       </nav>
     </header>
@@ -34,17 +34,17 @@
         <h1>Wood Pile</h1>
         <h2>Jenny Heishman (2012)</h2>
         <h3>Boren Ave N & Thomas St</h3>
-        <p>Fabricated stainless steel, bronze and urethane paint. Commissioned by Vulcan Real Estate</p>
-        <ul class="expanding">
-          <li class="moreinfo">
+        <p class="brief">Fabricated stainless steel, bronze and urethane paint. Commissioned by Vulcan Real Estate</p>
+        <section class="expanding">
+          <div class="moreinfo">
             <h4 class="expand-button">More Info</h4>
             <p>Cupcake ipsum dolor sit amet soufflé cotton candy. Sesame snaps wafer powder sweet roll jelly cotton candy bear claw pastry topping. Gingerbread apple pie pie caramels. Oat cake lollipop dessert dessert pie tiramisu gummies marzipan. Candy chocolate bar caramels sugar plum macaroon apple pie danish. Lollipop pastry powder chocolate cake. Apple pie sesame snaps croissant bear claw sesame snaps. Chocolate cake liquorice tiramisu tart sweet roll cheesecake candy brownie pudding. Tootsie roll cookie jelly sesame snaps pie pudding fruitcake soufflé gummies. Sweet roll gummi bears dessert jelly apple pie lemon drops tiramisu unerdwear.com.</p>
-          </li>
-          <li class="map">
+          </div>
+          <div class="map">
             <h4 class="expand-map">Find It</h4>
             <img class="mapz" src="images/occidentalmap.jpg" alt="map">
-          </li>
-        </ul>
+          </div>
+        </section>
       </section>
     </article>
     <article>
@@ -55,17 +55,17 @@
         <h1>Cabin Corners</h1>
         <h2>Boren Ave N & Republican St</h2>
         <h3>Jenny Heishman (2010)</h3>
-        <p>Fabricated aluminum and epoxy paint. Commissioned by Vulcan Real Estate</p>
-        <ul class="expanding">
-          <li class="moreinfo">
+        <p class="brief">Fabricated aluminum and epoxy paint. Commissioned by Vulcan Real Estate</p>
+        <section class="expanding">
+          <div class="moreinfo">
             <h4 class="expand-button">More Info</h4>
             <p>Gummies wafer bear claw gummi bears pastry brownie biscuit. Jelly beans icing cupcake unerdwear.com danish topping lemon drops cotton candy. Lollipop gingerbread liquorice soufflé liquorice tiramisu. Halvah croissant ice cream. Pudding icing sweet roll bonbon. Donut ice cream gingerbread. Powder candy canes pudding. Chocolate cake pudding gummies.</p>
-          </li>
-          <li class="map">
+          </div>
+          <div class="map">
             <h4 class="expand-map">Find It</h4>
             <img class="mapz" src="images/occidentalmap.jpg" alt="map">
-          </li>
-        </ul>
+          </div>
+        </section>
       </section>
     </article>
     <article>
@@ -76,17 +76,17 @@
         <h1>Labyrinth</h1>
         <h2>307 Westlake Ave N</h2>
         <h3>Linda Beaumont (2003)</h3>
-        <p>Multi-layered glass with photo-process imagery. Commissioned by Vulcan Real Estate, Harbor Properties and Seattle Biomedical Research Institute</p>
-        <ul class="expanding">
-          <li class="moreinfo">
+        <p class="brief">Multi-layered glass with photo-process imagery. Commissioned by Vulcan Real Estate, Harbor Properties and Seattle Biomedical Research Institute</p>
+        <section class="expanding">
+          <div class="moreinfo">
             <h4 class="expand-button">More Info</h4>
             <p>Cupcake applicake marshmallow topping tart candy jujubes. Halvah cupcake pie carrot cake carrot cake biscuit cookie sugar plum sesame snaps. Oat cake sesame snaps halvah candy canes tiramisu dragée croissant. Apple pie tiramisu jelly pie gummi bears jelly. Marzipan pie cake. Chocolate bar donut marzipan applicake. Wafer chocolate cake cotton candy ice cream.</p>
-          </li>
-          <li class="map">
+          </div>
+          <div class="map">
             <h4 class="expand-map">Find It</h4>
             <img class="mapz" src="images/occidentalmap.jpg" alt="map">
-          </li>
-        </ul>
+          </div>
+        </section>
       </section>
     </article>
     <article>
@@ -97,17 +97,17 @@
         <h1>Articulated Start</h1>
         <h2>Public Plaza of Boren Ave N</h2>
         <h3>Eric Eley (2011)</h3>
-        <p>Mild steel, stainless steel and urethane enamel paint. Commissioned by Vulcan Real Estate</p>
-        <ul class="expanding">
-          <li class="moreinfo">
+        <p class="brief">Mild steel, stainless steel and urethane enamel paint. Commissioned by Vulcan Real Estate</p>
+        <section class="expanding">
+          <div class="moreinfo">
             <h4 class="expand-button">More Info</h4>
             <p>Jelly beans chupa chups cookie candy canes. Gingerbread applicake gummi bears. Unerdwear.com pie brownie ice cream. Fruitcake brownie marzipan tootsie roll danish cookie. Sesame snaps oat cake pie. Dessert caramels pudding candy canes macaroon croissant caramels pudding. Candy chocolate bar bear claw croissant sweet apple pie marzipan. Jujubes chocolate cake oat cake jujubes oat cake chocolate bar marshmallow. Toffee bonbon donut unerdwear.com chocolate bar. Macaroon jelly beans sweet roll toffee gummies muffin jelly beans.</p>
-          </li>
-         <li class="map">
+          </div>
+         <div class="map">
             <h4 class="expand-map">Find It</h4>
             <img class="mapz" src="images/occidentalmap.jpg" alt="map">
-          </li>
-        </ul>
+          </div>
+        </section>
       </section>
     </article>
     <article>
@@ -118,17 +118,17 @@
         <h1>Beacon Cloud, Toto</h1>
         <h2>550 Terry Ave N</h2>
         <h3>Jamie Walker (2010)</h3>
-        <p>Fabricated aluminum and epoxy paint. Commissioned by Vulcan Real Estate</p>
-        <ul class="expanding">
-          <li class="moreinfo">
+        <p class="brief">Fabricated aluminum and epoxy paint. Commissioned by Vulcan Real Estate</p>
+        <section class="expanding">
+          <div class="moreinfo">
             <h4 class="expand-button">More Info</h4>
             <p>Sesame snaps cookie pie chocolate sweet roll sweet. Lollipop gummies danish fruitcake. Halvah pastry croissant muffin oat cake. Gingerbread marzipan bear claw cheesecake pastry. Wafer toffee marzipan jujubes tiramisu sesame snaps pudding icing. Applicake lollipop dessert muffin cupcake macaroon cake toffee. Cake tart cupcake jelly-o toffee icing soufflé chocolate caramels. Dragée marzipan brownie. Candy chocolate cake cupcake. Lollipop gummies marshmallow muffin.</p>
-          </li>
-          <li class="map">
+          </div>
+          <div class="map">
             <h4 class="expand-map">Find It</h4>
             <img class="mapz" src="images/occidentalmap.jpg" alt="map">
-          </li>
-        </ul>
+          </div>
+        </section>
       </section>
     </article>
   </section>
